I have improved the meta dat of the information pages

--- a/Information-pages/Basketball.html
+++ b/Information-pages/Basketball.html
@@ -5,7 +5,8 @@
          <!-- metda data for the code--> 
          <meta charset="UTF-8">
          <meta name="viewport" content="width=device-width, initial-scale=1.0">
- 
+         <meta name="description" content="Basketball, particularly Michael Jordan changed the trainer game for good.">
+         <meta name="keywords" content="creative, fashion, Hip-Hop, 90s, J's, Jordans, Jordan 1, Retro Jordans, Nike, athleisure,streetwear, 80's, Streetball">
          <!-- links my css and html pages--> 
          <link rel="stylesheet" href="../Style/Streetwear's-evolution.css" type="text/css" />
  
@@ -15,13 +16,13 @@
          <!-- This is the document title vsisible in the tab or browser title bar--> 
          <title>Basketball</title>
      </head>
-            <body style="background-color:rgb(177, 156, 217);" class="text">
-                <h1 class="Font"><strong>Basketball</strong></h1><br><br>
+     <body style="background-color:rgb(177, 156, 217);" class="text">
+        <h1 class="Font"><strong>Basketball</strong></h1><br><br>
 
-                <p class="WorkSans"> During the early 80s, there was a growing demand for athletic wear to be worn for the aesthetic. Streetball was also growing in popularity. The Nike Air Jordan 1 brought a lot of controversy to professional basketball, but the shoe was a huge success as a fashion statement and helped Nike to achieve the streetwear status it has today. Till this day the Jordan and Nike are major players in the sneakers game. Sports attire such as jerseys and sneakers have had a great influence on fashion. Some of which is still evident today. With some of the most successful sneaker ‘drops’ being tied to iconic sporting events or players. <br><br>Nike is a popular streetwear/athleisure brand and it currently has contracts with 284 NBA players, dominating any other brand in the NBA. Basketball themed or related streetwear have consistently been a streetwear trend, with NBA teams and players collaborating on or featuring in various street culture fashion releases. NBA features are not only limited to brands such as Nike. Louis Vuitton (LV), Bershka & Dragon Ball Z have also had successful collaborations with the NBA, showing the influence of basketball culture in street culture aesthetics outside of sports.</p>
+        <p class="WorkSans"> During the early 80s, there was a growing demand for athletic wear to be worn for the aesthetic. Streetball was also growing in popularity. The Nike Air Jordan 1 brought a lot of controversy to professional basketball, but the shoe was a huge success as a fashion statement and helped Nike to achieve the streetwear status it has today. Till this day the Jordan and Nike are major players in the sneakers game. Sports attire such as jerseys and sneakers have had a great influence on fashion. Some of which is still evident today. With some of the most successful sneaker ‘drops’ being tied to iconic sporting events or players. <br><br>Nike is a popular streetwear/athleisure brand and it currently has contracts with 284 NBA players, dominating any other brand in the NBA. Basketball themed or related streetwear have consistently been a streetwear trend, with NBA teams and players collaborating on or featuring in various street culture fashion releases. NBA features are not only limited to brands such as Nike. Louis Vuitton (LV), Bershka & Dragon Ball Z have also had successful collaborations with the NBA, showing the influence of basketball culture in street culture aesthetics outside of sports.</p>
                 
-                <img src="../Media/NBA-x-LV-collection.png" alt="NBA x LV collection" width="150">
+        <img src="../Media/NBA-x-LV-collection.png" alt="NBA x LV collection" width="150">
                 
-                <p class="WorkSans">To view the rest of the NBA x LV collection <a href= "https://uk.louisvuitton.com/eng-gb/magazine/articles/mens-lvxnba-2020#" target="_blank" class="links" aria-label="click here to veiw the NBA x Louis Vuitton collection">click here</a></p>
-            </body>  
+        <p class="WorkSans">To view the rest of the <a href= "https://uk.louisvuitton.com/eng-gb/magazine/articles/mens-lvxnba-2020#" target="_blank" class="links" aria-label="click here to veiw the NBA x Louis Vuitton collection"> NBA x LV collection click here</a></p>
+     </body>  
 </html>
