--- a/Information-pages/Hip-Hop.html
+++ b/Information-pages/Hip-Hop.html
@@ -4,6 +4,8 @@
          <!-- metda data for the code--> 
          <meta charset="UTF-8">
          <meta name="viewport" content="width=device-width, initial-scale=1.0">
+         <meta name="description" content="Hip-Hop is at the heart of street culture">
+         <meta name="keywords" content="creative, fashion, Hip-Hop, 90s, 90s clothing, Karl Karni, streetwears evolution, street culture, rappers, rap,">
 
          <!-- links my css and html pages--> 
          <link rel="stylesheet" href="../Style/Streetwear's-evolution.css" type="text/css" />
@@ -14,14 +16,13 @@
             <!-- This is the document title vsisible in the tab or browser title bar--> 
             <title>Hip-Hop</title>
       </head>
+      <body style="background-color:rgb(177, 156, 217);" class="text">
+            <h1 class="Font"><strong>Hip-Hop</strong></h1><br><br>
 
-            <body style="background-color:rgb(177, 156, 217);" class="text">
-               <h1 class="Font"><strong>Hip-Hop</strong></h1><br><br>
+            <p class="WorkSans">Hip-Hop started in the 70s and as it gained popularity, people began to embrace the new style of fashion that was created alongside it. By the 90s Hip-Hop had popularised streetwear moving it from a subsector of fashion to a mainstream trend. During the 90s Hip-Hop icons like Tupac & TLC can be seen wearing brands such as Dickies, Timberlands, Tommy Hilfiger & Karl Karni. This was the beginning of designer brands catering to the street culture aesthetic.<br><br> Hip-Hop continues to contribute to fashion, particularly street culture. The 90s asthetic is currently on trend and was heavily influenced by hip hop trends such as overalls, graphics tees and jerseys.</p>
 
-               <p class="WorkSans">Hip-Hop started in the 70s and as it gained popularity, people began to embrace the new style of fashion that was created alongside it. By the 90s Hip-Hop had popularised streetwear moving it from a subsector of fashion to a mainstream trend. During the 90s Hip-Hop icons like Tupac & TLC can be seen wearing brands such as Dickies, Timberlands, Tommy Hilfiger & Karl Karni. This was the beginning of designer brands catering to the street culture aesthetic.<br><br> Hip-Hop continues to contribute to fashion, particularly street culture. The 90s asthetic is currently on trend and was heavily influenced by hip hop trends such as overalls, graphics tees and jerseys.</p>
-
-               <br><br><img src= "../Media/Hip-Hop.png" alt="tommy-jeans-x-space-jam-tie-dye-t-shirt" width="400">
+            <br><br><img src= "../Media/Hip-Hop.png" alt="tommy-jeans-x-space-jam-tie-dye-t-shirt" width="200">
                
-               <p class="WorkSans"><a href= "https://uk.tommy.com/tommy-jeans-x-space-jam-tie-dye-t-shirt-dm0dm12198w02" target="_blank" class="links" aria-label="click to visit the Tommy Hilfiger website">Click here</a> to check out similar relases from Tommy Hilfiger</p>
-            </body>
+            <p class="WorkSans"><a href= "https://uk.tommy.com/tommy-jeans-x-space-jam-tie-dye-t-shirt-dm0dm12198w02" target="_blank" class="links" aria-label="click to visit the Tommy Hilfiger website">Click here to check out similar relases</a>  from Tommy Hilfiger</p>
+      </body>
 </html>
