--- a/Information-pages/Japanese-Streetwear.html
+++ b/Information-pages/Japanese-Streetwear.html
@@ -4,7 +4,8 @@
         <!-- metda data for the code--> 
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+        <meta name="description" content="Japanese-Streetwear initially started as way to rebel and acted as a symbol of defiance.">
+        <meta name="keywords" content="creative, fashion, Youth culture, Street culture, , Bape, Hypebeast, Japanese-Streetwear, Bearbrick, defiance, luxury streetwear, CDG, comme-des-garcons">
         <!-- links my css and html pages--> 
         <link rel="stylesheet" href="../Style/Streetwear's-evolution.css" type="text/css" />
 
@@ -23,7 +24,7 @@
 
                      <img src="../Media/Qiu-Tu.png" alt="Qiu-Tu Be@rbrick" width="250"><br><br>Yue Minjun 'Qiu Tu' 1000% Bearbrick (2008), the most expenesive Be@rbrick<br><br>
                
-                  <p class="WorkSans">If you want to start your own Be@rbrick collection, <a href="https://blog.ha.com/heritage-guide-to-collecting-bebricks/" target="_blank" class="links" aria-label="Read more about be@rbrick colleting" >click here.</a> <br><br><a href= "https://www.selfridges.com/GB/en/cat/be-rbrick/" target="_blank" class="links" aria-label="Click here to check out the Be@rbrick collection at selfridges">Click here to check out the Bearbrick collection </a> at selfridges</p>
+                  <p class="WorkSans">If you want to start your own <a href="https://blog.ha.com/heritage-guide-to-collecting-bebricks/" target="_blank" class="links" aria-label="Read more about be@rbrick colleting" >Be@rbrick collection,click here.</a> <br><br><a href= "https://www.selfridges.com/GB/en/cat/be-rbrick/" target="_blank" class="links" aria-label="Click here to check out the Be@rbrick collection at selfridges">Click here to check out the Bearbrick collection </a> at selfridges</p>
             </body>
      
 </html>
