--- a/Information-pages/Street-art.html
+++ b/Information-pages/Street-art.html
@@ -4,7 +4,8 @@
         <!-- metda data for the code--> 
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+        <meta name="description" content="street art has played a key role in street culture, particularly in it being adopted in luxury fashion.">
+        <meta name="keywords" content="creative, fashion, Youth culture, Street culture, , Keith Harring, Hypebeast, KAWS, Street art, graphic tees, graphic clothing, Gucci-Ghost">
         <!-- links my css and html pages--> 
         <link rel="stylesheet" href="../Style/Streetwear's-evolution.css" type="text/css" />
 
@@ -21,8 +22,8 @@
 
           <br><br><img src= "../Media/Gucci-Ghost-ring.png" alt="Gucci-Ghost-ring" width="200"><br><br>
                
-         <p class="WorkSans"><a href= https://www.gucci.com/us/en/st/stories/inspirations-and-codes/article/agenda_2016_issue05_guccighost_collection_trouble_andrew_qa target="_blank" class="links" aria-label="read more about the Gucci Ghost collection">Click here</a> to learn more about the Gucci Ghost x Gucci collobaration. <br><br> 
-               To see Keith Harrings' art work <a href="https://www.haring.com/!/introduction" target="_blank" class="links" aria-label="click here to view Keith Harrings art work">click here.</a> To see Trevor Andrews art work<a href="https://niftygateway.com/collections/trevorandrew" target="_blank" class="links" aria-label="To see Trevor Andrews art work">click here</a></p>
+         <p class="WorkSans"><a href= https://www.gucci.com/us/en/st/stories/inspirations-and-codes/article/agenda_2016_issue05_guccighost_collection_trouble_andrew_qa target="_blank" class="links" aria-label="read more about the Gucci Ghost collection">Click here to learn more about</a> the Gucci Ghost x Gucci collobaration. <br><br> 
+               To see Keith Harrings' <a href="https://www.haring.com/!/introduction" target="_blank" class="links" aria-label="click here to view Keith Harrings art work">art work click here.</a> To see<a href="https://niftygateway.com/collections/trevorandrew" target="_blank" class="links" aria-label="To see Trevor Andrews art work">Trevor Andrews art work click here</a></p>
      <footer></footer>
      </body>
 </html>
