--- a/Information-pages/Skating.html
+++ b/Information-pages/Skating.html
@@ -4,7 +4,8 @@
         <!-- metda data for the code--> 
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+        <meta name="description" content="Japanese-Streetwear initially started as way to rebel and acted as a symbol of defiance.">
+        <meta name="keywords" content="creative, fashion, Youth culture, Street culture, , Bape, Hypebeast, skate culture, defiance, luxury streetwear, stussy, skaters, skating, street sports,80s,">
         <!-- links my css and html pages--> 
         <link rel="stylesheet" href="../Style/Streetwear's-evolution.css" type="text/css" />
 
@@ -21,6 +22,6 @@
 
              <br><br><img src="../Media/Supreme-x-Stone-Island.png" alt="Supreme x Stone Island jacket" width="250"><br><br>
         
-         <p class="WorkSans"><a href= "https://www.stoneisland.co.uk/pages/stone-island-supreme-aw_020-021-colab" target="_blank" class="links" aria-label="read more about the Supreme x Stone Island collaboration">Click here</a> to learn more about the Supreme x Stone Island colab.<br><br> To visit the supreme store <a href="https://www.stoneisland.co.uk/pages/stone-island-supreme-aw_020-021-colab" target="_blank" class="links" aria-label="To visit the Supreme store">click here</a></p>
+         <p class="WorkSans"><a href= "https://www.stoneisland.co.uk/pages/stone-island-supreme-aw_020-021-colab" target="_blank" class="links" aria-label="read more about the Supreme x Stone Island collaboration">Click here to learn more about the</a>  Supreme x Stone Island colab.<br><br> To visit the <a href="https://www.stoneisland.co.uk/pages/stone-island-supreme-aw_020-021-colab" target="_blank" class="links" aria-label="To visit the Supreme store">supreme store click here</a></p>
      </body>
 </html>
